# docs/openapi.v1.json
@@ -2078,6 +2078,7 @@
       "GetRoomStateResponse": {
         "required": [
           "roomId",
+          "currentPlayerId",
           "joinCode",
           "status",
           "session",
@@ -2093,6 +2094,10 @@
             "description": "Unique room identifier.",
             "format": "uuid",
             "example": "a1b2c3d4-e5f6-7890-abcd-ef1234567890"
+          },
+          "currentPlayerId": {
+            "type": "string",
+            "format": "uuid"
           },
           "joinCode": {
             "type": "string",
